--- a/wibsite.css
+++ b/wibsite.css
@@ -107,12 +107,14 @@ body {
 .navbar {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
+  align-items: center;
   background-color: #fff;
+  padding: 20px 20px;
   transition: background-color 0.5s;
   position: sticky;
   top: 0;
   z-index: 1000;
+  border: 1px solid rgb(243, 238, 238);
 }
 
 .dark-mode .navbar {
@@ -138,13 +140,13 @@ body {
   list-style: none;
   display: flex;
   justify-content: center;
-  color: #0b0b0b;
+  color: #555;
   box-shadow: 0 15px 10px rgba(0, 0, 0, 0.1);
   gap: 1rem;
   font-size: 14PX;
-  margin: 10px;
-  padding: 10px;
-  background: rgb(246, 246, 243);
+  margin: 5px;
+  padding: 5px;
+  z-index: 3000;
 }
 
 .nav-links li {
@@ -539,12 +541,16 @@ body.dark-mode {
 }
 
 .add-to-cart {
-  background-color: #fff;
-  border-radius: 12px;
+  background-color: #0b0b0b;
+  border: none;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+
 }
 
 .add-to-cart:hover {
-  background-color: #0b0b0b;
+  background-color: #181818;
   color: white;
 }
 
@@ -846,11 +852,32 @@ body.dark-mode {
 
 
 
+/* product-heading */
+.product-heading{
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  font-family: emoji;
+}
+.product-heading:after {
+  content: '';
+  display: block;
+  width: 20em; /* Width of the underline */
+  height: 2px; /* Height of the underline */
+  background-color: black; /* Color of the underline */
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -85px; /* Adjust this value if you want to move the line further from the text */
+}
+
+
+
 
 /* carousel */
 .carousel {
-  margin-top: -10px;
-  height: 390px;
+  margin-top: -7px;
+  height: 370px;
   overflow: hidden;
   position: relative;
 }
@@ -975,16 +1002,33 @@ body.dark-mode {
   letter-spacing: 3px;
   background-color: transparent;
   opacity: 0;
+  cursor: pointer;
+  color: #000;
   pointer-events: none;
 }
 
 .carousel .list .item .intro .title {
   font-size: 2em;
+  
 }
-
+.title{
+  font-family: "Merriweather", serif;
+  font-weight: 600;
+  font-style: normal;
+}
 .carousel .list .item .intro .topic {
   font-size: 4em;
   font-weight: 500;
+}
+.topic{
+  font-family: "Merriweather", serif;
+  font-weight: 700;
+  font-style: normal;
+}
+.des{
+  font-family: "Fira Sans", sans-serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 .carousel .list .item .intro .des {
@@ -1000,6 +1044,7 @@ body.dark-mode {
   margin-top: 1.2em;
   padding: 5px 0;
 }
+
 
 .carousel .list .item:nth-child(2) .intro .title,
 .carousel .list .item:nth-child(2) .intro .topic,
@@ -1074,7 +1119,7 @@ body.dark-mode {
 }
 
 .carousel.next .list .item:nth-child(4) {
-  animation: positionItem5 0.7s ease-in-out 1 forwards;
+  animation: positionItem5 1.1s ease-in-out 1 forwards;
 }
 
 @keyframes positionItem5 {
@@ -1085,3 +1130,308 @@ body.dark-mode {
     opacity: var(--item5-opacity);
   }
 }
+
+.carousel.prev .list .item:nth-child(1) {
+  animation: positionItem5 0.5s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem1 {
+  from {
+    transform: var(--item1-transform);
+    filter: var(--item1-filter);
+    z-index: var(--item1-zIndex);
+    opacity: var(--item1-opacity);
+  }
+}
+
+.carousel.prev .list .item:nth-child(2) {
+  animation: positionItem1 0.7s ease-in-out 1 forwards;
+}
+
+.carousel.prev .list .item:nth-child(3) {
+  animation: positionItem2 0.9s ease-in-out 1 forwards;
+}
+
+.carousel.prev .list .item:nth-child(4) {
+  animation: positionItem3 1.1s ease-in-out 1 forwards;
+}
+
+.carousel.prev .list .item:nth-child(5) {
+  animation: positionItem4 1.3s ease-in-out 1 forwards;
+}
+
+
+
+/* Basic styles for the carousel and items */
+.carousel .list .item {
+  transition: left 0.5s;
+}
+.carousel.showDetail .item:nth-child(3),
+.carousel.showDetail .item:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+  pointer-events: none;
+}
+.carousel.showDetail .item:nth-child(2) {
+  width: 100%;
+}
+.carousel.showDetail .item:nth-child(2) .intro {
+  opacity: 0;
+  pointer-events: none;
+}
+.carousel .list .item:nth-child(2) img {
+  transition: right 0.5s;
+}
+.carousel.showDetail .item:nth-child(2) img {
+  height: 65%;
+  width: 20%;
+  right: 70%;
+}
+.carousel.showDetail .item:nth-child(2) .detail {
+  opacity: 1;
+  pointer-events: auto;
+  width: 50%;
+  position: absolute;
+  right: 0;
+  text-align: right;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.carousel.showDetail .list .item .detail .title {
+  font-size: 4em;
+}
+.carousel.showDetail .list .item .detail .specification {
+  display: flex;
+  gap: 1px;
+  width: 100%;
+  border-top: 1px solid #555;
+  margin-top: 20px;
+}
+.carousel.showDetail .list .item .detail .specification div {
+  width: 90px;
+  text-align: center;
+  flex-shrink: 0;
+}
+.carousel.showDetail .list .item .detail .title div p:nth-child(1) {
+  font-weight: bold;
+}
+.carousel.showDetail .list .item .detail .checkout button {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: transparent;
+  border: 1px solid #555;
+  margin-top: 5px;
+  font-weight: 500;
+}
+.carousel.showDetail .list .item .checkout button:nth-child(2) {
+  background-color: #100341;
+  color: white;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .title,
+.carousel.showDetail .list .item:nth-child(2) .detail .des,
+.carousel.showDetail .list .item:nth-child(2) .detail .specification,
+.carousel.showDetail .list .item:nth-child(2) .detail .checkout {
+  opacity: 0;
+  animation: showContent 0.5s 1s ease-in-out 1 forwards;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .des {
+  animation-delay: 1.2s;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .specification {
+  animation-delay: 1.4s;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .checkout {
+  animation-delay: 1.6s;
+}
+.carousel.showDetail #next,
+.carousel.showDetail #prev {
+  opacity: 0;
+  pointer-events: none;
+}
+.carousel.showDetail #back {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+/* Add @keyframes for showContent */
+@keyframes showContent {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.carousel::before{
+  width: 500px;
+  height: 300px;
+  content: '';
+  background-image: linear-gradient(45deg, #5403ac , #000 ,#fff);
+  position: absolute;
+  z-index: -1;
+  border-radius: 20% 30% 80% 10%;
+  filter: blur(150px);
+  top: 50%;
+  left: 50%;
+  transform: translate(-10%, -50%) rotate(70deg);
+}
+.dark-mode .carousel .intro .searchMore{
+  color: white;
+}
+.dark-mode .carousel .intro ,  #back{
+  color: white;
+}
+.dark-mode .specification,.checkout button{
+  color: white;
+}
+.dark-mode .detail{
+  color: white;
+}
+.dark-mode #back{
+  color: white;
+}
+
+
+
+
+/* footer */
+
+
+.footer {
+  background: linear-gradient(to right, #0b0b0b, #1d1d1d);
+  color: #fff;
+  text-align: left;
+  position: relative;
+  top: 2rem;
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.footer-section {
+  flex: 1;
+  min-width: 250px;
+  margin: 10px 0;
+}
+
+.footer-section h3 {
+  font-size: 24px;
+  border-bottom: 2px solid #fff;
+  display: inline-block;
+}
+
+.footer-section p,
+.footer-section ul,
+.footer-section a {
+  font-size: 16px;
+  line-height: 1.5;
+  color: #f1f1f1;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin: 10px 0;
+  width: 6rem;
+}
+
+.footer-section ul li a {
+  color: #f1f1f1;
+  text-decoration: none;
+  transition: color 0.3s;
+}
+
+.footer-section ul li a:hover {
+  color: #e2e2e2;
+  text-decoration: underline;
+}
+
+
+
+
+.newsletter {
+  background: #0b0b0b;
+  padding: 15px;
+  border-radius: 10px;
+  position: relative;
+  bottom: 4rem;
+  box-shadow: 0 1px 10px rgba(246, 244, 244, 0.1);
+
+}
+
+
+
+
+.newsletter form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+
+.newsletter input[type="email"] {
+  flex: 1;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+}
+
+.newsletter button {
+  padding: 10px 20px;
+  border: none;
+  background-color: #0b0b0b;
+  color: #fff;
+  font-family: emoji;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.newsletter button:hover {
+  background-color: #0b0b0b;
+}
+
+@media (max-width: 768px) {
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+
+
+
+.social{
+  display: flex;
+  column-gap: 0.2rem;
+  position: relative;
+  right: 1em;
+
+}
+.social .bx{
+padding: 8px ;
+background: rgb(0, 0, 0);
+color:#fff;
+border-radius: 5rem;
+font-size: 18px;
+}
+.social .bx:hover{
+  background: #fff;
+  color: rgb(6, 5, 17);
+  transition: 0.3s all linear;
+}
+
+.copyright{
+  text-align: center;
+  position: relative;
+  top: 1.2rem;
+}
+
