--- a/wibsite.css
+++ b/wibsite.css
@@ -546,6 +546,10 @@ body.dark-mode {
   padding: 10px;
   color: white;
   cursor: pointer;
+  position: relative;
+  top: 5px;
+  right: 8px;
+  border-radius: 0px 7px 0px 7px;
 
 }
 
@@ -648,7 +652,7 @@ body.dark-mode {
 .add-to-heart {
   position: relative;
   bottom: 20rem;
-  left: 4.5rem;
+  left: 7.5rem;
   color: #0b0b0b;
   border-radius: 12px;
 }
